--- a/Capstone Game/Capstone Game.csproj
+++ b/Capstone Game/Capstone Game.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Fighter Pack Bundle Free\Code\CameraControl.cs" />
+    <Compile Include="Assets\Fighter Pack Bundle Free\Code\DiscoAnim.cs" />
     <Compile Include="Assets\Fighter Pack Bundle Free\Code\FighterAnimationDemo.cs" />
-    <Compile Include="Assets\Player1.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
